--- a/secao15/css/flappy.css
+++ b/secao15/css/flappy.css
@@ -35,14 +35,21 @@
 .barreira .borda{
     height: 30px;
     width: 130px;
-    background: linear-gradient(90deg, #639301, #A5E82e);
+    background: linear-gradient(90deg, #639301, #A5E82E);
     border: 2px solid #000;
 
 }
 .barreira .corpo{
-    height: 40px;
+    height: 150px;
     width: 110px;
-    background: linear-gradient(90deg, #639301, #A5E82e);
+    background: linear-gradient(90deg, #639301, #A5E82E);
     border-left: 2px solid #000;
     border-right: 2px solid #000;
+}
+.progresso{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-family: Pixel;
+    font-size: 70px;
 }
