--- a/secao31/crud/frontend/src/app/components/template/header/header.component.html
+++ b/secao31/crud/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,14 @@
-<mat-toolbar class="header"> 
+<mat-toolbar class="header mat-elevation-z4"> 
+    <!--mat-elevation-z4: é um component css-->
     <span>
         <a>
-            <img src="/secao31/crud/frontend/src/assets/logo.png" alt="logo">
+            <img class="logo" src="assets/img/logo.png" alt="logo">
         </a>
+    </span>
+    <span class="title-group"> 
+        <i class="material-icons">
+            home <!--icones-->
+        </i>
+        Aplicação CRUD
     </span>
 </mat-toolbar>
