--- a/secao31/crud/frontend/src/app/components/template/header/header.component.html
+++ b/secao31/crud/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z4"> 
     <!--mat-elevation-z4: é um component css-->
     <span>
-        <a>
+        <a routerLink="/">
             <img class="logo" src="assets/img/logo.png" alt="logo">
         </a>
     </span>
@@ -9,6 +9,6 @@
         <i class="material-icons">
             home <!--icones-->
         </i>
-        Aplicação CRUD
+        Inicio
     </span>
 </mat-toolbar>
