criação da aba produtos

--- a/secao31/crud/frontend/src/app/components/template/nav/nav.component.html
+++ b/secao31/crud/frontend/src/app/components/template/nav/nav.component.html
@@ -7,7 +7,7 @@
                 </i>
                 Inicio
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/products">
                 <i class="material-icons">
                     storefront
                 </i>
