--- a/secao31/crud/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/secao31/crud/frontend/src/app/components/product/product-create/product-create.component.html
@@ -5,3 +5,24 @@
 
 ESTA UTILIZANDO BINDINGS   
 --> 
+<mat-card>
+    <mat-card-title>Novo Produto</mat-card-title>
+    <form>
+        <!-- <mat-form-field> 
+            <input matInput placeholder="Código" [(ngModel)]="product.id" name="id">
+        </mat-form-field> -->
+        <mat-form-field> 
+            <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="createProduct()" color="primary">
+        Salvar
+    </button>
+    
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
+</mat-card>
