--- a/secao31/crud/frontend/src/app/components/product/product-read/product-read.component.css
+++ b/secao31/crud/frontend/src/app/components/product/product-read/product-read.component.css
@@ -1,3 +1,12 @@
 table{
     width: 100%;
 }
+.edit{
+    margin-right: 10px;
+}
+.edit > i{
+    color: #266ed9;
+}
+.delete > i{
+    color: #e35e6b;
+}
