--- a/secao31/crud/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/secao31/crud/frontend/src/app/components/product/product-read/product-read.component.html
@@ -23,10 +23,10 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="" class="edit">
+          <a routerLink="/products/update/{{row.id}}" class="edit">
             <i class="material-icons edit">edit</i>
           </a>
-          <a routerLink="/products/update/{{row.id}}" class="delete">
+          <a routerLink="" class="delete">
             <i class="material-icons delete">delete</i>
           </a>
         </td>
