--- a/secao31/crud/frontend/src/app/components/template/header/header.component.css
+++ b/secao31/crud/frontend/src/app/components/template/header/header.component.css
@@ -1,20 +1,23 @@
-.header{
+.header {
     display: flex;
     align-items: center;
-
 }
-.header a{
+
+.header a {
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: #333;
 }
+
 .header .logo {
     max-height: 32px;
 }
-.header .title-group{
+
+.header .title-group {
     padding-left: 25px;
 }
-.header .title-group i{
-    padding-right: 25px;
-}
 
+.header .title-group i {
+    padding-right: 5px;
+}
