--- a/secao31/crud/frontend/src/app/components/template/header/header.component.html
+++ b/secao31/crud/frontend/src/app/components/template/header/header.component.html
@@ -1,14 +1,16 @@
-<mat-toolbar class="header mat-elevation-z4"> 
-    <!--mat-elevation-z4: é um component css-->
-    <span>
-        <a routerLink="/">
-            <img class="logo" src="assets/img/logo.png" alt="logo">
-        </a>
-    </span>
-    <span class="title-group"> 
-        <i class="material-icons">
-            home <!--icones-->
-        </i>
-        Inicio
-    </span>
-</mat-toolbar>
+  <!--mat-elevation-z4: é um component css-->
+    <mat-toolbar class="header mat-elevation-z4">
+        <span>
+            <a routerLink="/">
+                <img class="logo" src="assets/img/logo.png" alt="logo">
+            </a>
+        </span>
+        <span class="title-group">
+            <a routerLink="{{ routeUrl }}">
+                <i class="material-icons">
+                    {{ icon }}
+                </i>
+                {{ title }}
+            </a>
+        </span>
+    </mat-toolbar>
